Integrate Solr as Search-Backend